# solana-booking-platform

./: .gitignore  AGENT_API.md  BRAND.md  DEMO.md  DEPLOY.md  LICENSE  Product feedbacks Human.txt  README.md  STATUS.md  next.config.js  package-lock.json  package.json  tsconfig.json  vercel.json
.github/workflows/: deploy.yml
anchor/: Anchor.toml
anchor/programs/solana_booking_agent/: Cargo.toml
anchor/programs/solana_booking_agent/src/: error.rs  lib.rs  state.rs
anchor/programs/solana_booking_agent/src/instructions/: book_room.rs  cancel_booking.rs  complete_booking.rs  confirm_booking.rs  create_room.rs  initialize.rs  initialize_hotel.rs  mod.rs  release_expired.rs
app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/dashboard/client/: page.tsx
app/dashboard/hotel/: page.tsx
components/: BookingFlow.tsx  BookingModal.tsx  HotelCard.tsx  ListPropertyModal.tsx  PropertyCard.tsx  SolanaPayQR.tsx  Toast.tsx  WalletButton.tsx
components/dashboard/: Sidebar.tsx  StatCard.tsx
data/: hotels.json  hotels.ts  listings.ts
docs/: 404.html  ANCHOR_ARCHITECTURE.md  ARCHITECTURE.md  DEPLOY-NOTES.md  DEPLOYMENT.md  FEATURES.md  PROJECT_ARCHITECTURE.md  TROUBLESHOOTING.md  index.html  index.txt
docs/_next/static/chunks/: 117-862c47ba45b7d44f.js  117-a3f5196ace15cebc.js  117-d53f6f943a266a77.js  145-4dba5aae0fea9c48.js  145-8a0506c685082be6.js  (+60 more)
docs/dashboard/: client.html  client.txt  hotel.html  hotel.txt
hooks/: useBookingNFT.ts  useCNFT.ts  useEscrowPayment.ts  useNFTReceipt.ts  useSolanaPay.ts
lib/: anchor.ts
public/: manifest.json
(+38 files in other folders)
