[package]
name = "solana-booking-agent"
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.70"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_booking_agent"

[features]
default = ["custom-panic", "custom-heap"]
custom-panic = []
custom-heap = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["metadata"] }
